add: testing and enhanced frontend
