# backend/internal/module/payment/handler/payment.go
@@ -2,10 +2,10 @@ package handler
 
 import (
 	"encoding/json"
-	"fmt"
 	"net/http"
 
 	"github.com/durianpay/fullstack-boilerplate/internal/entity"
+	"github.com/durianpay/fullstack-boilerplate/internal/module/payment/repository"
 	paymentUsecase "github.com/durianpay/fullstack-boilerplate/internal/module/payment/usecase"
 	"github.com/durianpay/fullstack-boilerplate/internal/openapigen"
 	"github.com/durianpay/fullstack-boilerplate/internal/transport"
@@ -18,13 +18,18 @@ type PaymentHandler struct {
 type PaymentResponse struct {
 	ID       string `json:"id"`
 	Merchant string `json:"merchant"`
-	Date     string `json:"date"`
+	CreatedAt string `json:"created_at"`
 	Amount   string `json:"amount"`
 	Status   string `json:"status"`
 }
 
 type Response struct {
 	Payments []PaymentResponse `json:"payments"`
+}
+
+type WidgetResponse struct {
+	Total  int                 `json:"total"`
+	Widget []repository.Widget `json:"widget"`
 }
 
 func NewPaymentHandler(paymentUC paymentUsecase.PaymentUsecase) *PaymentHandler {
@@ -34,7 +39,6 @@ func NewPaymentHandler(paymentUC paymentUsecase.PaymentUsecase) *PaymentHandler 
 }
 
 func (p *PaymentHandler) GetDashboardV1Payments(w http.ResponseWriter, r *http.Request, params openapigen.GetDashboardV1PaymentsParams) {
-	// TODO add implementations
 	var status string
 	if params.Status != nil {
 		status = *params.Status
@@ -44,8 +48,6 @@ func (p *PaymentHandler) GetDashboardV1Payments(w http.ResponseWriter, r *http.R
 	if params.Id != nil {
 		id = *params.Id
 	}
-
-	fmt.Println(w, "Searching for: %s with status: %s", id, status)
 
 	data, err := p.paymentUC.GetPayments(id, status)
 	if err != nil {
@@ -58,7 +60,7 @@ func (p *PaymentHandler) GetDashboardV1Payments(w http.ResponseWriter, r *http.R
 		response = append(response, PaymentResponse{
 			ID:       payment.ID,
 			Merchant: payment.Merchant,
-			Date:     payment.Date,
+			CreatedAt: payment.CreatedAt,
 			Amount:   payment.Amount,
 			Status:   payment.Status,
 		})
@@ -72,14 +74,14 @@ func (p *PaymentHandler) GetDashboardV1Payments(w http.ResponseWriter, r *http.R
 }
 
 func (p *PaymentHandler) GetDashboardV1PaymentsWidget(w http.ResponseWriter, r *http.Request) {
-	widget, err := p.paymentUC.DashboardWidget()
+	dataWidget, dataTotal, err := p.paymentUC.DashboardWidget()
 	if err != nil {
 		transport.WriteError(w, err)
 		return
 	}
 
 	w.Header().Set("Content-Type", "application/json")
-	if err := json.NewEncoder(w).Encode(map[string]string{"widget": widget}); err != nil {
+	if err := json.NewEncoder(w).Encode(WidgetResponse{Widget: dataWidget, Total: dataTotal.Total}); err != nil {
 		transport.WriteAppError(w, entity.ErrorInternal("internal server error"))
 		return
 	}
